Make logo clickable link in Topnav

--- a/src/styles/components/Topnav.css
+++ b/src/styles/components/Topnav.css
@@ -9,6 +9,12 @@
   color: #ffffff;
 }
 
+.logo-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
 .logo {
   height: 40px;
   width: auto;
