--- a/src/styles/components/Topnav.css
+++ b/src/styles/components/Topnav.css
@@ -84,7 +84,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 50%;
   padding: 1rem;
   box-sizing: border-box;
   border-bottom: 1px solid #ddd;
