--- a/src/styles/components/Topnav.css
+++ b/src/styles/components/Topnav.css
@@ -40,18 +40,29 @@
   gap: 1rem;
 }
 
-.sign-in {
-  color: #262b36;
+.sign-in,
+.get-started {
+  border: 1px solid;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
   font-weight: bold;
   text-decoration: none;
-  border: none;
+}
+
+.sign-in {
+  color: #262b36;
+  border-color: #262b36;
 }
 
 .get-started {
   color: #3acf6e;
-  font-weight: bold;
-  text-decoration: none;
-  border: none;
+  border-color: #3acf6e;
+}
+
+.sign-in:hover,
+.get-started:hover {
+  background-color: #3acf6e;
+  color: #ffffff;
 }
 
 .menu-button {
@@ -84,7 +95,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 50%;
+  height: 65%;
   padding: 1rem;
   box-sizing: border-box;
   border-bottom: 1px solid #ddd;
@@ -113,11 +124,11 @@
 .menu-links {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1.5rem;
 }
 
 .menu-links a {
-  color: #606b86;
+  color: #606B86;
   text-decoration: none;
   font-size: 0.9rem;
 }
@@ -128,8 +139,9 @@
 
 .menu-auth-links {
   display: flex;
-  gap: 0.5rem;
+  gap: 5rem; 
   margin-top: 1rem;
+  justify-content: center; 
 }
 
 .menu-auth-links .sign-in,
@@ -137,7 +149,7 @@
   color: #3acf6e;
   border: 1px solid #3acf6e;
   background: none;
-  padding: 0.5rem 0.8rem;
+  padding: 0.5rem 1rem; 
   font-size: 0.8rem;
 }
 
