--- a/src/styles/components/Hero.css
+++ b/src/styles/components/Hero.css
@@ -1,15 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 .hero {
-  background-image: url("/public/assets/background.png");
+  background-image: url("/src/assets/background.png");
   background-size: cover;
   background-position: center;
   height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   color: #ffffff;
   font-family: "Inter", sans-serif;
-  text-align: center;
   padding: 0 2rem;
   position: relative;
   z-index: -1;
@@ -18,6 +18,7 @@
 
 .hero-content {
   text-align: left;
+  max-width: 50%; 
 }
 
 .hero-content h1 {
@@ -55,6 +56,16 @@
 }
 
 .hero-button:hover {
-  background-color: #3acf6e !important;
-  border-color: #3acf6e !important;
+  background-color: #3acf6e;
+  border-color: #3acf6e;
+}
+
+.hero-image {
+  max-width: 50%; 
+}
+
+.hero-image img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
