--- a/src/styles/components/Hero.css
+++ b/src/styles/components/Hero.css
@@ -131,7 +131,16 @@
   color: #262b36;
   font-size: 2rem;
   margin-top: 0rem;
+  margin-bottom: 0;
   font-weight: bold;
+}
+
+.meet-siphome-description {
+  color: #606b86;
+  font-size: 0.875rem;
+  margin-bottom: 0;
+  margin-top: 1rem;
+  padding-right: 15rem;
 }
 
 /* Mobile responsiveness */
