--- a/src/styles/components/Update.css
+++ b/src/styles/components/Update.css
@@ -87,7 +87,6 @@
     background-image: url("/src/assets/background-update-mobile.png");
     flex-direction: column;
     align-items: center;
-    background-position: center bottom;
   }
 
   .update-content {
@@ -99,9 +98,11 @@
   .update-title {
     margin-left: 0;
     font-size: 1.5rem;
+    color: #ffffff;
   }
 
   .update-subtitle {
+    color: #ffffff;
     margin-left: 0;
     font-size: 1.2rem;
     padding-right: 0;
