--- a/src/styles/components/Services.css
+++ b/src/styles/components/Services.css
@@ -35,3 +35,40 @@
   height: auto;
   margin-top: 2rem;
 }
+
+.service-icons-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  max-width: 1000px;
+  margin: 5rem auto;
+}
+
+.service-icon-box {
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  text-align: left;
+}
+
+.service-icon {
+  width: 50px;
+  height: auto;
+  margin-right: 1rem;
+}
+
+.service-icon-text {
+  color: #262b36;
+  font-size: 1rem;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+  .service-icons-container {
+    grid-template-columns: 1fr;
+  }
+}
