--- a/src/styles/components/Services.css
+++ b/src/styles/components/Services.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import "/node_modules/swiper/swiper-bundle.min.css";
 
 .service {
   background-color: #ecf0f7;
@@ -69,6 +70,9 @@
 /* Mobile responsiveness */
 @media (max-width: 768px) {
   .service-icons-container {
-    grid-template-columns: 1fr;
+    display: none;
+  }
+  .service-swiper {
+    display: block;
   }
 }
