--- a/src/styles/components/Services.css
+++ b/src/styles/components/Services.css
@@ -67,12 +67,56 @@
   font-size: 1rem;
 }
 
-/* Mobile responsiveness */
+.service-swiper {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.swiper-custom-pagination {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.swiper-custom-pagination .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  opacity: 1;
+  margin: 0 5px;
+}
+
+.swiper-custom-pagination .swiper-pagination-bullet-active {
+  background-color: #2053d1;
+}
+
+/* Mobile styles */
 @media (max-width: 768px) {
   .service-icons-container {
-    display: none;
+    display: none; 
   }
+
+  .service-swiper,
+  .swiper-custom-pagination {
+    display: block; 
+  }
+
   .service-swiper {
-    display: block;
+    margin-top: 1rem; 
+  }
+}
+
+/* Desktop styles */
+@media (min-width: 769px) {
+  .service-icons-container {
+    display: grid; 
+  }
+
+  .service-swiper,
+  .swiper-custom-pagination {
+    display: none; 
   }
 }
