--- a/src/styles/components/Testimonial.css
+++ b/src/styles/components/Testimonial.css
@@ -48,7 +48,7 @@
   text-align: left;
   position: relative;
   height: 100%;
-  overflow: visible; /* Ensure the photo doesn't overflow */
+  overflow: visible;
 }
 
 .testimonial-content {
@@ -71,18 +71,18 @@
 .testimonial-message {
   color: #262b36;
   font-size: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .testimonial-name {
   color: #262b36;
-  font-size: 1.25rem;
-  margin-bottom: 0.2rem;
+  font-size: 1rem;
+  margin-bottom: -0.67rem;
 }
 
 .testimonial-role {
   color: #606b86;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .testimonial-slide {
