--- a/src/styles/components/Testimonial.css
+++ b/src/styles/components/Testimonial.css
@@ -102,11 +102,12 @@
 
   .testimonial-content {
     padding-right: 0;
-    padding-top: 100px;
+    padding-top: 2.5rem;
+    text-align: center;
   }
 
   .testimonial-photo-container {
-    top: 1rem;
+    top: -2rem;
     right: 50%;
     transform: translateX(50%);
   }
