--- a/src/styles/components/Contact.css
+++ b/src/styles/components/Contact.css
@@ -12,22 +12,24 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 1.5rem;
 }
 
 .contact-title {
   color: #2053d1;
-  letter-spacing: 0.5em;
+  letter-spacing: 1em;
   font-size: 1rem;
   font-weight: bold;
-  margin-bottom: 1rem;
 }
 
 .contact-subtitle {
   color: #262b36;
   font-weight: bold;
-  font-size: 2rem;
-  padding-right: 1rem;
-  margin-bottom: 2rem;
+  text-align: left;
+  font-size: 3.5rem;
+  margin-bottom: 2.5rem;
+  margin-right: 40rem;
+  margin-top: 0.3rem;
 }
 
 .contact-illustration {
