--- a/src/styles/components/Contact.css
+++ b/src/styles/components/Contact.css
@@ -7,6 +7,7 @@
   align-items: center;
   padding: 4rem 2rem;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .contact-content {
@@ -77,6 +78,7 @@
   padding: 1rem;
   border: 1.5px solid #ccc;
   border-radius: 0.5rem;
+  box-sizing: border-box;
 }
 
 .contact-submit {
@@ -107,13 +109,17 @@
     width: 100%;
     padding: 0;
     margin: 0;
-    text-align: center;
+    text-align: left;
   }
 
   .contact-title,
   .contact-subtitle {
     text-align: center;
     padding-right: 0;
+  }
+
+  .contact-subtitle {
+    font-size: 2.57rem;
   }
 
   .contact-image {
@@ -123,7 +129,7 @@
   }
 
   .form-group label {
-    text-align: center;
+    text-align: left;
   }
 
   .form-group input,
