--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -6,10 +6,13 @@
   background-color: #ffffff;
   padding: 2rem;
   font-family: "Inter", sans-serif;
+  margin-top: 5rem;
 }
 
 .footer-left {
   max-width: 40%;
+  text-align: left;
+  margin-left: 2rem;
 }
 
 .footer-logo {
@@ -25,7 +28,9 @@
 .footer-right {
   display: flex;
   justify-content: space-between;
-  width: 50%;
+  width: 60%;
+  text-align: left;
+  margin-right: 2rem;
 }
 
 .footer-column {
