--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -97,6 +97,7 @@
   .footer {
     flex-direction: column;
     align-items: center;
+    padding: 2rem 1rem;
   }
 
   .footer-left,
@@ -104,6 +105,11 @@
     max-width: 100%;
     width: 100%;
     margin: 1rem 0;
+    text-align: center;
+  }
+
+  .footer-left {
+    margin-left: 0;
   }
 
   .footer-right {
@@ -111,6 +117,35 @@
   }
 
   .footer-column {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    align-items: center;
+  }
+
+  .footer-logo {
+    margin: 0 auto 1rem;
+  }
+
+  .footer-heading {
+    text-align: center;
+  }
+
+  .footer-link {
+    text-align: center;
+  }
+
+  .footer-text {
+    text-align: center;
+  }
+
+  .footer-bottom {
+    margin-top: 1rem;
+  }
+
+  .footer-copyright {
+    flex-direction: column;
+  }
+
+  .footer-icon-github {
+    margin: 0.5rem 0;
   }
 }
