--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -114,11 +114,13 @@
 
   .footer-right {
     flex-direction: column;
+    align-items: center;
   }
 
   .footer-column {
     margin-bottom: 2rem;
     align-items: center;
+    width: 100%;
   }
 
   .footer-logo {
@@ -135,6 +137,31 @@
 
   .footer-text {
     text-align: center;
+  }
+
+  .footer-right .footer-column:last-child {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-right .footer-column:last-child .footer-heading {
+    align-self: center;
+  }
+
+  .footer-right .footer-column:last-child .footer-link {
+    align-self: flex-start;
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  /* Create a container for social media links */
+  .social-media-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 auto;
   }
 
   .footer-bottom {
