--- a/src/styles/components/Hero.css
+++ b/src/styles/components/Hero.css
@@ -260,7 +260,8 @@
 
   .illustration-image {
     margin: 2rem 0;
-    max-width: 80%;
+    max-width: 100%;
+    width: auto;
   }
 
   .features-heading-container {
